--- a/style.css
+++ b/style.css
@@ -14,3 +14,13 @@ h2{
     color: #303030;
     font-weight: 600;
 }
+
+.carousel-caption h5{
+    font-size:  80px;
+    color: #ffc107;
+    text-shadow: 2px 2px 2px black;
+}
+
+.modal-header h1{
+    color: black;
+}
